--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 </head>
 <body>
   <h2>Snap.svg</h2>
+  <div>
+    <button type="button" id="create">Create</button>
+    <button type="button" id="dump">Dump to console</button>
+    <button type="button" id="create2">create2</button>
+  </div>
 </body>
 </html>
